# Sunse

./: .gitignore  changes.md  license.md  pyproject.toml  pytest.ini  readme.md  requirements
sunse/: __init__.py  __main__.py
sunse/comms/: __init__.py  list.py  main.py
sunse/items/: __init__.py  book.py  note.py
sunse/tools/: __init__.py  file.py  path.py  vals.py
tests/: conftest.py
tests/test_comms/: test_list.py  test_main.py
tests/test_items/: test_book.py  test_note.py
tests/test_tools/: test_file.py  test_path.py  test_vals.py
